@@ -25,6 +25,9 @@ DOS_VOLUME_LABEL = "Debian Inst"
 #SPLASH_RLE=boot/i386/pics/nicholson.rle
 #SPLASH_RLE=boot/i386/pics/yazici.rle
 SPLASH_RLE=boot/i386/pics/klowner.rle
+# Won the vote, but is not default until it stops referring to sarge as
+# Debian 3.0..
+#SPLASH_RLE=boot/i386/pics/polverini_b.rle
 
 # Create a bootable image.
 .PHONY: arch_boot
